fixed footer alignment

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -12,7 +12,7 @@
 
 .footer_container {
     display: flex;
-    align-items: flex-end;
+    align-items: center;
 }
 
 .olive {
